--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     ],
     "require-dev": {
         "php": "^7.4|^8.0",
-        "orchestra/testbench": "6.*|5.*",
         "phpunit/phpunit": "^8.0|^9.0",
-        "laravel/passport": "^9.4"
+        "laravel/passport": "^9.4",
+        "wilkques/php-helper": "^2.0.0"
     },
     "autoload": {
         "files": [
-            "src/helpers.php"
+            "src/Helpers/helpers.php"
         ],
         "psr-4": {
             "Wilkques\\OpenAPI\\": "src/"
