--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "php": "^7.4|^8.0",
         "phpunit/phpunit": "^8.0|^9.0",
         "laravel/passport": "^9.4",
-        "orchestra/testbench": "6.*|5.*",
-        "wilkques/php-helper": "^2.0.0"
+        "orchestra/testbench": "6.*|5.*"
     },
     "autoload": {
         "files": [
@@ -42,6 +41,7 @@
         "phpdocumentor/reflection-docblock": "^4.3|^5.2",
         "php": "^7.4|^8.0",
         "laravel/framework": "^8.0|^7.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "wilkques/php-helper": "^2.0.0"
     }
 }
