--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: php artisan vendor:publish --provider "Wilkques\OpenAPI\OpenAPIServiceProvider"
+      run: php artisan vendor:publish --provider "Wilkques\OpenAPI\OpenAPIServiceProvider"
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
