--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "require": {
         "phpdocumentor/reflection-docblock": "^4.3|^5.2",
         "php": "^7.4|^8.0",
-        "laravel/framework": ">=7.0",
+        "laravel/framework": "^11.0|^10.0|^9.0|^8.0|^7.0",
         "ext-json": "*",
         "wilkques/php-helper": "^5.0.0"
     }
