--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require-dev": {
         "php": "^7.4|^8.0",
-        "phpunit/phpunit": "^8.0|^9.0",
+        "phpunit/phpunit": "^8.0|^9.0|^9.3|^10.5",
         "laravel/passport": "^9.4",
-        "orchestra/testbench": "6.*|5.*"
+        "orchestra/testbench": "6.*|5.*|^7.35|^8.14|^9.0"
     },
     "autoload": {
         "files": [
