--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require-dev": {
         "php": "^7.4|^8.0",
         "phpunit/phpunit": "^8.0|^9.0|^9.3|^10.5",
-        "laravel/passport": "^9.4",
+        "laravel/passport": "^9.4|^10.0|^11.0|^12.0",
         "orchestra/testbench": "6.*|5.*|^7.35|^8.14|^9.0"
     },
     "autoload": {
