--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "wilkques/openapi",
-    "description": "Auto generates the OAS3 documentation for a laravel project",
+    "description": "Auto generates the Swagger.io documentation for a laravel project",
     "license": "MIT",
     "authors": [
         {
@@ -9,10 +9,10 @@
         }
     ],
     "require-dev": {
-        "php": "^7.4|^8.0",
-        "phpunit/phpunit": "^8.0|^9.0",
-        "laravel/passport": "^9.4",
-        "orchestra/testbench": "6.*|5.*"
+        "php": "^8.1",
+        "phpunit/phpunit": "^9.3|^10.5",
+        "laravel/passport": "^11.0|^12.0",
+        "orchestra/testbench": "^7.35|^8.14|^9.0"
     },
     "autoload": {
         "files": [
@@ -40,7 +40,7 @@
     "require": {
         "phpdocumentor/reflection-docblock": "^4.3|^5.2",
         "php": "^7.4|^8.0",
-        "laravel/framework": "^8.0|^7.0",
+        "laravel/framework": "^11.0|^10.0|^9.0",
         "ext-json": "*",
         "wilkques/php-helper": "^5.0.0"
     }
